<resources>
    <string name="app_name">PSC ADMIN</string>
    <string name="title_home">Home</string>
    <string name="title_message">Message</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_request">Requests</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
