<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/msg"
        android:title="@string/title_message" />
    <item
        android:id="@+id/navigation_request"
        android:icon="@drawable/req"
        android:title="@string/title_request" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/title_profile" />


</menu>
