<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pscadmin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.pscadmin.ui.dashboard.DashboardFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_request"
        android:name="com.example.pscadmin.ui.request.RequestFragment"
        android:label="@string/title_request"
        tools:layout="@layout/fragment_request" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.pscadmin.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.pscadmin.ui.profile.HomeFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
